# extant

./: AUTHORS  INSTALL  Makefile.am  README.md  autogen.sh  configure.ac
doc/: Doxyfile.in  Makefile.am
doc/include/extant/set/: common.h
doc/pages/: arraysets.md  dso.md  index.md  listsets.md  loggersystem.md  memorymanagement.md  nodesets.md  queuesets.md  returnstatus.md  stacksets.md  treesets.md
examples/log/: logger-with-cancel.c  logger-with-exit.c
include/extant/: common.h  dso.h  error.h  extant.h  log.h  memory.h  set.h
include/extant/memory/: common.h  pool.h  region.h
include/extant/set/: array.h  common.h  list.h  node.h  queue.h  stack.h  tree.h
include/extant/set/tree/: avltree.h
src/: Makefile.am  common.c  extant.c
src/dso/: dlopen.c
src/log/: log.c
src/set/: array.c  common.c  list.c  node.c  queue.c  stack.c  tree.c
src/set/tree/: avltree.c
tests/: Makefile.am  common.c  error.c
tests/dso/: Makefile.am  dso.c
tests/log/: Makefile.am  log.c
tests/set/: Makefile.am  array.c  common.c  list.c  node.c  queue.c  stack.c
tests/set/tree/: Makefile.am  avltree.c
tests/xtnt_set/: Makefile.am  xtnt_node_initialize_tests.c  xtnt_node_uninitialize_tests.c
tests/xtnt_set/xtnt_array/: Makefile.am  xtnt_array_add_tests.c  xtnt_array_delete_tests.c  xtnt_array_get_tests.c  xtnt_array_list_tests.c  xtnt_array_set_tests.c
tests/xtnt_set/xtnt_list/: Makefile.am  xtnt_list_delete_tests.c  xtnt_list_insert_tests.c  xtnt_list_replace_tests.c  xtnt_list_search_tests.c
tests/xtnt_set/xtnt_queue/: Makefile.am  xtnt_queue_peek_tests.c  xtnt_queue_pop_tests.c  xtnt_queue_push_tests.c
tests/xtnt_set/xtnt_stack/: Makefile.am  xtnt_stack_peek_tests.c  xtnt_stack_pop_tests.c  xtnt_stack_push_tests.c
tests/xtnt_set/xtnt_tree/: Makefile.am  xtnt_tree_delete_tests.c  xtnt_tree_insert_tests.c  xtnt_tree_replace_tests.c  xtnt_tree_search_tests.c
